@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.533 2008/09/06 19:55:59 sfeam Exp $
+C RCS $Id: gnuplot.doc,v 1.534 2008/09/07 15:52:39 sfeam Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -10563,23 +10563,13 @@ Ffigure_mapcontours
                  {add}
                  {  autofreq
                   | <incr>
-                  | <start>, <inc> {,<end>}
-                  | (<ticlabelspec> {, <ticlabelspec>} ...)
-                  | for [<var> = start:end:inc] (<ticlabelspec>) }
+                  | <start>, <incr> {,<end>}
+                  | ({"<label>"} <pos> {<level>} {,{"<label>"}...) }
                  { format "formatstring" } { font "name{,<size>}" }
                  { rangelimited }
                  { textcolor <colorspec> }
        unset xtics
        show xtics
-
- <ticlabelspec> is a string-valued expression (optional), followed by an
- axis position (mandatory), and a tic level (optional).
- Examples:
-       "pi" 3.14159
- will creates a major tic labeled "pi" at axis position 3.14159
-       "pi" 3.14159 1
- will create a minor tic at axis position 3.14159 (the label "pi" will not
- be visible because labels are not drawn for minor tics.
 
  The same syntax applies to `ytics`, `ztics`, `x2tics`, `y2tics` and `cbtics`.
 
@@ -10625,8 +10615,8 @@ Ffigure_mapcontours
  frequency or position {and labels} are retained.
 
  Positions of the tics are calculated automatically by default or if the
- `autofreq` option is given; otherwise they may be specified in one of
- three forms:
+ `autofreq` option is given; otherwise they may be specified in either of
+ two forms:
 
  The implicit <start>, <incr>, <end> form specifies that a series of tics will
  be plotted on the axis between the values <start> and <end> with an increment
@@ -10686,12 +10676,6 @@ Ffigure_mapcontours
 
  In the second example, all tics are labelled.  In the third, only the end
  tics are labelled.  In the fourth, the unlabeled tic is a minor tic.
-
- The third form generates arbitrary tic labels by iterative invocation of
- user-specified functions for the tic position and the label string.
-
- Example:
-       set xtics for [i=1:3] (sprintf("%d x pi",i)  i*pi)
 
  Normally if explicit tics are given, they are used instead of auto-generated
  tics. Conversely if you specify `set xtics auto` or the like it will erase
